--- a/Dollars/CO/Vacation/D_CO_Vac_Wage.html
+++ b/Dollars/CO/Vacation/D_CO_Vac_Wage.html
@@ -1,41 +1,95 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <ul>
+        <li><b>Direct Labour Model Methodology</b></li>
+        <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Drivers</a>
+            <div class="dropdown-content">
+                <a href="../../../Driver/Driver_MP.html">Mail processing</a>
+                <a href="../../../Driver/Driver_CD.html">Collection & Delivery</a>
+                <a href="../../../Driver/Driver_CO.html">Counter Operations</a>
+            </div>
+        </li>
+        <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Dollars Matrix</a>
+            <div class="dropdown-content">
+                <a href="../../DollarMatrix_MP.html">Mail processing</a>
+                <a href="../../DollarMatrix_CD.html">Collection & Delivery</a>
+                <a href="../../DollarMatrix_CO.html">Counter Operations</a>
+            </div>
+        </li>
+        <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Hours Matrix</a>
+            <div class="dropdown-content">
+                <a href="../../../Hours/HourMatrix_MP.html">Mail processing</a>
+                <a href="../../../Hours/HourMatrix_CD.html">Collection & Delivery</a>
+                <a href="../../../Hours/HourMatrix_CO.html">Counter Operations</a>
+            </div>
+        </li>
+        <li class="dropdown">
+          <a href="javascript:void(0)" class="dropbtn">Reference</a>
+          <div class="dropdown-content">
+              <a href="../../../Reference/ActGrp.html">Act Group</a>
+              <a href="../../../Reference/Adjustments.html">Adjustments</a>
+              <a href="../../../Reference/AllocationRates.html">Allocation Rates</a>
+              <a href="../../../Reference/Dollars.html">BW Dollars</a>
+              <a href="../../../Reference/GLCEGrp_Dollars.html">GLCE Group (Dollars)</a>
+              <a href="../../../Reference/GLCEGrp_Hours.html">GLCE Group (Hours)</a>
+              <a href="../../../Reference/Hours.html">BW Hours</a>
+              <a href="../../../Reference/HoursNonHoursSplit.html">Hours v Non Hours Related</a>
+              <a href="../../../Reference/LYPaidRate.html">LY Paid Rate</a>
+              <a href="../../../Reference/Plant_NonPlant.html">Plant v Non Plant</a>
+              <a href="../../../Reference/TimeGroup_Dollars.html">Time Group (Dollars)</a>
+              <a href="../../../Reference/TimeGroup_Hours.html">Time Group (Hours)</a>
+              <a href="../../../Reference/WageIncrease.html">Wage Increase</a>
+          </div>
+      </li>
+    </ul>
+    <link rel="stylesheet" href="../../../style.css" />
+</head>
 <body>
-  <font face="Arial" size ="3">															
-    <b>Tab: </b>	GM Matrix	<br>	
-    <b>Table: </b>	Counter Operations	<br>														
-    <b>Data Type: </b>	Dollars	<br>													
-    <b>Row: </b>	Vacation	<br>													
-    <b>Column: </b>	Wage Increase	<br>													
+    <Table class = "style2">
+        <tr class = "style2">
+          <td class = "style3" align = "right"><b>Tab:</b></td>
+          <td class = "style3">Matrix</td></tr>
+        <tr class = "style2">
+          <td class = "style3" align = "right"><b>Table:</b></td>
+          <td class = "style3">Counter Operations</td></tr>								
+        <tr class = "style2">
+          <td class = "style3" align = "right"><b>Data Type:</b></td>
+          <td class = "style3">Dollars</td></tr>	
+        <tr class = "style2">
+          <td class = "style3" align = "right"><b>Row:</b></td>
+          <td class = "style3">Vacation</td></tr>	
+        <tr class = "style2">
+          <td class = "style3" align = "right"><b>Column:</b></td>
+          <td class = "style3">Wage Increase</td></tr>	
+      </Table>															
+  <p class = "eq">													
+    <i>Value = <b>	<a href="../../../Reference/WageIncrease.html">[Wage Increase]</a> </b></i>	<br>		
     <br>
-  </font>															
-  <font face="Times New Roman" size ="4">															
-    <i>Value = <b>	[Wage Increase] </b></i>	<br>													
-    <br>
-  </font>															
-  <font face="Arial" size ="3">															
-    <TABLE BORDER="1" CELLPADDING="2" CELLSPACING="0">															
-      <tr>	
-        <td width = "100">	<i>Name</i>	</td>	
-        <td width = "100">	<i>Time Group</i>	</td>	
-        <td width = "100">	<i>Act Group</i>	</td>	
-        <td width = "150">	<i>Union</i>	</td>
-      </tr>
-      <tr>	
-        <td width = "100">	[Wage Increase]	</td>	
-        <td width = "100">	PdAbs	</td>	
-        <td width = "100">	CO	</td>	
-        <td width = "150">	CUPW/CPAA	</td>
-      </tr>
-    </table>
-  </font>															
-  <br>	   
-  <br>                     
-  <font face="Arial" size ="3">															
+  </p>																													
+  <TABLE>															
+    <tr>	
+      <td>	<i>Name</i>	</td>	
+      <td>	<i>Time Group</i>	</td>	
+      <td>	<i>Act Group</i>	</td>	
+      <td>	<i>Union</i>	</td>
+    </tr>
+    <tr>	
+      <td>	[Wage Increase]	</td>	
+      <td>	Vacation	</td>	
+      <td>	CO	</td>	
+      <td>	CUPW/CPAA	</td>
+    </tr>
+  </table>                   
+  <p>															
     <b>Further Links:</b>	
     <br>																											
-    <a href="../../../Reference/WageIncrease.html">[Wage Increase]</a>	
+    <a href="../../../Reference/TimeGroup_Dollars.html">[Time Group]</a>	
     <br>			
-    <br>
-    <br>
-    <a href="../../GMMatrix_Dollars.html">Back To GM Matrix</a>																							
-  </font>															
-</body>															
+    <a href="../../../Reference/ActGrp.html">[Act Group]</a>																								
+  </p>															
+</body>				
+</html>											
