--- a/Dollars/MP/HoursWorked/D_MP_HrWk_RR.html
+++ b/Dollars/MP/HoursWorked/D_MP_HrWk_RR.html
@@ -67,10 +67,14 @@
           <td class = "style3">Residual Rate & Allowances</td></tr>	
       </Table>															
   <p class = "eq">															
-    <i>Value = <b> <a href="../../../Reference/Dollars.html">[TY Dollars]</a>	 - { <a href="../../../Reference/Dollars.html">[LY Dollars]</a> 
-      + <a href="D_MP_HrWk_PlantHW.html">[Plant (Hours Worked)]</a> + <a href="D_MP_HrWk_NPHW.html">[Non Plant (Hours Worked)]</a>	
-      + <a href="D_MP_HrWk_Reorg.html">[Reorg & Coding]</a> + <a href="D_MP_HrWk_Wage.html">[Wage Increase]</a>	
-      + <a href="D_MP_HrWk_TradeDays.html">[Trade Days Adj.]</a>	+ <a href="D_MP_HrWk_Days.html">[Days Adjustments]</a> }</b></i>
+    <i>Value = <b> <a href="../../../Reference/Dollars.html">[TY Dollars]</a>	 
+      - { <a href="../../../Reference/Dollars.html">[LY Dollars]</a> 
+      + <a href="D_MP_HrWk_PlantHW.html">[Plant (Hours Worked)]</a> 
+      + <a href="D_MP_HrWk_NPHW.html">[Non Plant (Hours Worked)]</a>	
+      + <a href="D_MP_HrWk_Reorg.html">[Reorg & Coding]</a> 
+      + <a href="D_MP_HrWk_Wage.html">[Wage Increase]</a>	
+      + <a href="D_MP_HrWk_TradeDays.html">[Trade Days Adj.]</a>	
+      + <a href="D_MP_HrWk_Days.html">[Days Adjustments]</a> }</b></i>
   </p>																								
   <TABLE>															
     <tr>	<td>	<i>Name</i>	</td>	
