--- a/Dollars/CO/Vacation/D_CO_Vac_RR.html
+++ b/Dollars/CO/Vacation/D_CO_Vac_RR.html
@@ -1,60 +1,110 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <ul>
+        <li><b>Direct Labour Model Methodology</b></li>
+        <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Drivers</a>
+            <div class="dropdown-content">
+                <a href="../../../Driver/Driver_MP.html">Mail processing</a>
+                <a href="../../../Driver/Driver_CD.html">Collection & Delivery</a>
+                <a href="../../../Driver/Driver_CO.html">Counter Operations</a>
+            </div>
+        </li>
+        <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Dollars Matrix</a>
+            <div class="dropdown-content">
+                <a href="../../DollarMatrix_MP.html">Mail processing</a>
+                <a href="../../DollarMatrix_CD.html">Collection & Delivery</a>
+                <a href="../../DollarMatrix_CO.html">Counter Operations</a>
+            </div>
+        </li>
+        <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Hours Matrix</a>
+            <div class="dropdown-content">
+                <a href="../../../Hours/HourMatrix_MP.html">Mail processing</a>
+                <a href="../../../Hours/HourMatrix_CD.html">Collection & Delivery</a>
+                <a href="../../../Hours/HourMatrix_CO.html">Counter Operations</a>
+            </div>
+        </li>
+        <li class="dropdown">
+          <a href="javascript:void(0)" class="dropbtn">Reference</a>
+          <div class="dropdown-content">
+              <a href="../../../Reference/ActGrp.html">Act Group</a>
+              <a href="../../../Reference/Adjustments.html">Adjustments</a>
+              <a href="../../../Reference/AllocationRates.html">Allocation Rates</a>
+              <a href="../../../Reference/Dollars.html">BW Dollars</a>
+              <a href="../../../Reference/GLCEGrp_Dollars.html">GLCE Group (Dollars)</a>
+              <a href="../../../Reference/GLCEGrp_Hours.html">GLCE Group (Hours)</a>
+              <a href="../../../Reference/Hours.html">BW Hours</a>
+              <a href="../../../Reference/HoursNonHoursSplit.html">Hours v Non Hours Related</a>
+              <a href="../../../Reference/LYPaidRate.html">LY Paid Rate</a>
+              <a href="../../../Reference/Plant_NonPlant.html">Plant v Non Plant</a>
+              <a href="../../../Reference/TimeGroup_Dollars.html">Time Group (Dollars)</a>
+              <a href="../../../Reference/TimeGroup_Hours.html">Time Group (Hours)</a>
+              <a href="../../../Reference/WageIncrease.html">Wage Increase</a>
+          </div>
+      </li>
+    </ul>
+    <link rel="stylesheet" href="../../../style.css" />
+</head>
 <body>
-  <font face="Arial" size ="3">															
-    <b>Tab: </b>	GM Matrix	<br>	
-    <b>Table: </b>	Counter Operations	<br>													
-    <b>Data Type: </b>	Dollars	<br>													
-    <b>Row: </b>	Vacation	<br>													
-    <b>Column: </b>	Residual Rate & Allowances	<br>													
-    <br>
-  </font>															
-  <font face="Times New Roman" size ="4">															
-    <i>Value = <b> [TY Dollars] - { [LY Dollars] + [Retail Hours] + [Retail Initatives] 
-      + [Retail Vacation] + [Reorg & Coding] + [Wage Increase] + [Days Adjustments] }</b></i>
-    <br>													
-    <br>
-  </font>															
-  <font face="Arial" size ="3">															
-    <TABLE BORDER="1" CELLPADDING="2" CELLSPACING="0">															
-      <tr>	<td width = "150">	<i>Name</i>	</td>	
-        <td width = "100">	<i>Fiscal Year</i>	</td>	
-        <td width = "100">	<i>GLCE Group</i>	</td>	
-        <td width = "100">	<i>Act Group</i>	</td>	
-        <td width = "300">  <i>Hours or Non Hours Related</i></td>
-      </tr>
-      <tr>	<td width = "100">	[TY Dollars]	</td>	
-        <td>  TY	</td>	
-        <td>  Vacation	</td>	
-        <td>	CO	</td>	
-        <td>  Hours Related </td>
-      </tr>
-      <tr>	<td width = "100">	[LY Dollars]	</td>	
-        <td>  LY	</td>	
-        <td>	Vacation	</td>	
-        <td>	CO	</td>	
-        <td>  Hours Related </td>
-      </tr>
-    </table>
-  </font>														
-  <br>		
-  <br>									
-  <font face="Arial" size ="3">															
+    <Table class = "style2">
+        <tr class = "style2">
+          <td class = "style3" align = "right"><b>Tab:</b></td>
+          <td class = "style3">Matrix</td></tr>
+        <tr class = "style2">
+          <td class = "style3" align = "right"><b>Table:</b></td>
+          <td class = "style3">Counter Operations</td></tr>								
+        <tr class = "style2">
+          <td class = "style3" align = "right"><b>Data Type:</b></td>
+          <td class = "style3">Dollars</td></tr>	
+        <tr class = "style2">
+          <td class = "style3" align = "right"><b>Row:</b></td>
+          <td class = "style3">Vaction</td></tr>	
+        <tr class = "style2">
+          <td class = "style3" align = "right"><b>Column:</b></td>
+          <td class = "style3">Residual Rate & Allowances</td></tr>	
+      </Table>															
+  <p class = "eq">															
+    <i>Value = <b> <a href="../../../Reference/Dollars.html">[TY Dollars]</a>	 
+      - { <a href="../../../Reference/Dollars.html">[LY Dollars]</a> 
+      + <a href="D_CO_Vac_RetailHrs.html">[Retail Hours]</a> 
+      + <a href="D_CO_Vac_RetailInit.html">[Retail Initiatives]</a>	
+      + <a href="D_CO_Vac_Vac.html">[Vaction]</a> 
+      + <a href="D_CO_Vac_Reorg.html">[Reorg & Coding]</a> 
+      + <a href="D_CO_Vac_Wage.html">[Wage Increase]</a>	
+      + <a href="D_CO_Vac_TradeDays.html">[Trade Days Adj.]</a>	
+      + <a href="D_CO_Vac_Days.html">[Days Adjustments]</a> }</b></i>
+  </p>																								
+  <TABLE>															
+    <tr>	<td>	<i>Name</i>	</td>	
+      <td>	<i>Fiscal Year</i>	</td>	
+      <td>	<i>GLCE Group</i>	</td>	
+      <td>	<i>Act Group</i>	</td>	
+      <td>  <i>Hours or Non Hours Related</i></td>
+    </tr>
+    <tr>	<td>	[TY Dollars]	</td>	
+      <td>  TY	</td>	
+      <td>  Vaction	</td>	
+      <td>	CO	</td>	
+      <td>  Hours Related </td>
+    </tr>
+    <tr>	<td>	[LY Dollars]	</td>	
+      <td>  LY	</td>	
+      <td>  Vaction </td>	
+      <td>	CO	</td>	
+      <td>  Hours Related </td>
+    </tr>
+  </table>							
+  <p>															
     <b>Further Links:</b>	
     <br>
-    <a href="../../../Reference/Dollars.html">[TY Dollars] & [LY Dollars]</a>	
+    <a href="../../../Reference/ActGrp.html">[ActGrp]</a>	
     <br>														
-    <a href="D_CO_Vac_RetailHrs.html">[Retail Hours]</a>	
-    <br>
-    <a href="D_CO_Vac_RetailInit.html">[Retail Initiatives]</a>	
-    <br>
-    <a href="D_CO_Vac_Vac.html">[Retail Vacation]</a>	
-    <br>
-    <a href="D_CO_Vac_Reorg.html">[Reorg & Coding]</a>	
-    <br>
-    <a href="D_CO_Vac_Wage.html">[Wage Increase]</a>	
-    <br>
-    <a href="D_CO_Vac_Days.html">[Days Adjustments]</a>	
-    <br>
-    <br>
-    <a href="../../GMMatrix_Dollars.html">Back To GM Matrix</a>																						
-  </font>															
-</body>															
+    <a href="../../../Reference/GLCEGrp_Dollars.html">[GLCEGrp]</a>	
+    <br>														
+    <a href="../../../Reference/HoursNonHoursSplit.html">[Hours or Non Hours Related Split]</a>																				
+  </p>															
+</body>									
+</html>						
