--- a/Dollars/MP/OtherAllow/D_MP_othAllw_Days.html
+++ b/Dollars/MP/OtherAllow/D_MP_othAllw_Days.html
@@ -52,7 +52,7 @@
     <Table class = "style2">
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Tab:</b></td>
-          <td class = "style3">GM Matrix</td></tr>
+          <td class = "style3">Matrix</td></tr>
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Table:</b></td>
           <td class = "style3">Mail Processing</td></tr>								
