updated GM Matrix to Matrix in CD Dollars

--- a/Dollars/CD/RestBG/D_CD_RestBG_RR.html
+++ b/Dollars/CD/RestBG/D_CD_RestBG_RR.html
@@ -67,8 +67,8 @@
           <td class = "style3">Residual Rate & Allowances</td></tr>	
       </Table>															
   <p class = "eq">													
-    <i>Value = <b>	<a href="../../../Reference/Dollars.html">[TY Dollars]</a> 
-      - <a href="../../../Reference/Dollars.html">[LY Dollars]</a> 
+    <i>Value = <b>	<a href="../../../Reference/Dollars.html">[LY Dollars]</a> 
+      - <a href="../../../Reference/Dollars.html">[TY Dollars]</a> 
       - <a href="../../../Reference/Adjustments.html">[Adjustments]</a>
       - <a href="../../../Reference/WageIncrease.html">[Wage Increase]</a>	
     </b></i>	
