--- a/Dollars/CD/Absences/D_CD_PdAbs_RR.html
+++ b/Dollars/CD/Absences/D_CD_PdAbs_RR.html
@@ -52,7 +52,7 @@
     <Table class = "style2">
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Tab:</b></td>
-          <td class = "style3">GM Matrix</td></tr>
+          <td class = "style3">Matrix</td></tr>
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Table:</b></td>
           <td class = "style3">Collection & Delivery</td></tr>								
@@ -67,7 +67,8 @@
           <td class = "style3">Residual Rate & Allowances</td></tr>	
       </Table>														
   <p class = "eq">														
-    <i>Value = <b> <a href="../../../Reference/Dollars.html">[TY Dollars]</a>	 - { <a href="../../../Reference/Dollars.html">[LY Dollars]</a> 
+    <i>Value = <b> <a href="../../../Reference/Dollars.html">[LY Dollars]</a>	 
+      - { <a href="../../../Reference/Dollars.html">[TY Dollars]</a> 
       + <a href="D_CD_PdAbs_LCBench.html">[LC Benchmark]</a> 
       + <a href="D_CD_PdAbs_LCAProd.html">[LCA Productivity (Hours Worked)]</a>	
       + <a href="D_CD_PdAbs_MSCBench.html">[MSC Benchmark]</a>
