--- a/Dollars/CD/StatHolidays/D_CD_Stat_RR.html
+++ b/Dollars/CD/StatHolidays/D_CD_Stat_RR.html
@@ -67,7 +67,8 @@
           <td class = "style3">Residual Rate & Allowances</td></tr>	
       </Table>														
   <p class = "eq">														
-    <i>Value = <b> <a href="../../../Reference/Dollars.html">[TY Dollars]</a>	 - { <a href="../../../Reference/Dollars.html">[LY Dollars]</a> 
+    <i>Value = <b> <a href="../../../Reference/Dollars.html">[LY Dollars]</a>	 
+      - { <a href="../../../Reference/Dollars.html">[TY Dollars]</a> 
       + <a href="D_CD_Stat_LCBench.html">[LC Benchmark]</a> 
       + <a href="D_CD_Stat_LCAProd.html">[LCA Productivity (Hours Worked)]</a>	
       + <a href="D_CD_Stat_MSCBench.html">[MSC Benchmark]</a>
