--- a/Dollars/CD/Vacation/D_CD_Vac_RR.html
+++ b/Dollars/CD/Vacation/D_CD_Vac_RR.html
@@ -68,7 +68,8 @@
           <td class = "style3">Residual Rate & Allowances</td></tr>	
       </Table>														
   <p class = "eq">														
-    <i>Value = <b> <a href="../../../Reference/Dollars.html">[TY Dollars]</a>	 - { <a href="../../../Reference/Dollars.html">[LY Dollars]</a> 
+    <i>Value = <b> <a href="../../../Reference/Dollars.html">[LY Dollars]</a>	 
+      - { <a href="../../../Reference/Dollars.html">[TY Dollars]</a> 
       + <a href="D_CD_Vac_LCBench.html">[LC Benchmark]</a> 
       + <a href="D_CD_Vac_LCAProd.html">[LCA Productivity (Hours Worked)]</a>	
       + <a href="D_CD_Vac_MSCBench.html">[MSC Benchmark]</a>
