fixed driver dropdowns

--- a/Driver/Driver_CO.html
+++ b/Driver/Driver_CO.html
@@ -76,22 +76,22 @@
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Vacation</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/MP/YOY_MP_Vacation.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CO/YOY_CO_Vacation.html">link</a></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Training & Union Leaves</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/MP/YOY_MP_Training.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CO/YOY_CO_Training.html">link</a></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Stat Holidays</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/MP/YOY_MP_Stat.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CO/YOY_CO_Stat.html">link</a></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Reorg & Coding</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/MP/YOY_MP_Reorg.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CO/YOY_CO_Reorg.html">link</a></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
@@ -106,7 +106,7 @@
             </tr>
             <tr>
                 <td align="left" bgcolor="#81A0CF" style="text-indent:10px">Transfers outside region/Others</td>
-                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/MP/YOY_MP_TransfersOutsideRegion.html">link</a></td>
+                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CO/YOY_CO_TransfersOutsideRegion.html">link</a></td>
                 <td align="center" bgcolor="#81A0CF"></td>
             </tr>
             <tr>
