--- a/Driver/YOY/CD/YOY_CD_TradeDays.html
+++ b/Driver/YOY/CD/YOY_CD_TradeDays.html
@@ -16,8 +16,8 @@
             <a href="javascript:void(0)" class="dropbtn">Dollars Matrix</a>
             <div class="dropdown-content">
                 <a href="../../../Dollars/DollarMatrix_MP.html">Mail processing</a>
-                <a href="../../../DollarMatrix_CD.html">Collection & Delivery</a>
-                <a href="../../../DollarMatrix_CO.html">Counter Operations</a>
+                <a href="../../../Dollars/DollarMatrix_CD.html">Collection & Delivery</a>
+                <a href="../../../Dollars/DollarMatrix_CO.html">Counter Operations</a>
             </div>
         </li>
         <li class="dropdown">
