CO Driver done and method checked

--- a/Driver/Driver_CO.html
+++ b/Driver/Driver_CO.html
@@ -51,7 +51,7 @@
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Retail Initiatives</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/MP/YOY_MP_PlantHoursWorked.html">link</a></i></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CO/YOY_CO_RetailInit.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
@@ -116,12 +116,12 @@
             </tr>	
             <tr>
                 <td align="left" bgcolor="#ffffff">Wage Increase</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/MP/YOY_MP_Wage.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CO/YOY_CO_Wage.html">link</a></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Rate Other</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/MP/YOY_MP_RateOther.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CO/YOY_CO_RateOther.html">link</a></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
@@ -131,22 +131,22 @@
             </tr>
             <tr>
                 <td align="left">Allowances / Other</td>
-                <td align="center"><i><a href="YOY/MP/YOY_MP_Allowances.html">link</a></td>
+                <td align="center"><i><a href="YOY/CO/YOY_CO_Allowances.html">link</a></td>
                 <td align="center"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#81A0CF" style="text-indent:10px">Remaining Allowances</td>
-                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/MP/YOY_MP_RemainAllow.html">link</a></td>
+                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CO/YOY_CO_RemainAllow.html">link</a></td>
                 <td align="center" bgcolor="#81A0CF"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#81A0CF" style="text-indent:10px">Grievances / Pay inlieu</td>
-                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/MP/YOY_MP_Grievances.html">link</a></td>
+                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CO/YOY_CO_Grievances.html">link</a></td>
                 <td align="center" bgcolor="#81A0CF"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#81A0CF"style="text-indent:10px">Other Cost Pressures / Savings</td>
-                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/MP/YOY_MP_OtherCostPressures.html">link</a></td>
+                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CO/YOY_CO_OtherCostPressures.html">link</a></td>
                 <td align="center" bgcolor="#81A0CF"></td>
             </tr>	
             <tr>
@@ -161,7 +161,7 @@
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Trade Days Adj</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/MP/YOY_MP_TradeDays.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CO/YOY_CO_TradeDays.html">link</a></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <!-- <tr>
