--- a/Driver/Driver_MP.html
+++ b/Driver/Driver_MP.html
@@ -199,7 +199,7 @@
             </tr>
             <tr>
                 <td align="left" bgcolor="#81A0CF" style="text-indent:10px">Grievances / Pay inlieu</td>
-                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/MP/YOY_MP_Grievances.html">link</a></i></td>
+                <td align="center" bgcolor="#81A0CF"></td>
                 <td align="center" bgcolor="#81A0CF"></td>
             </tr>
             <tr>
