--- a/Driver/YOY/CO/YOY_CO_RemainAllow.html
+++ b/Driver/YOY/CO/YOY_CO_RemainAllow.html
@@ -58,16 +58,18 @@
           <td class = "style3">Counter Operations</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3"> Allowances / Other</td></tr>		
+          <td class = "style3"> Remaining Allowances</td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
-            <td class = "style3"> YOY Dollars  </td></tr>
+            <td class = "style3"> YOY Dollars  </td></tr>		
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="YOY_CO_RemainAllow.html">[Remaining Allowances]</a>
-            + <a href="YOY_CO_Grievances.html">[Grievances / Pay inlieu]</a>
-            + <a href="YOY_CO_OtherCostPressures.html">[Other Cost Pressures / Savings]</a>
+        <i>Value = <b> <a href="../../../Dollars/CO/NonHrsPmt/D_CO_NonHrsPmt_RR.html">[Non Hours Payments - Residual Rate & Allowances]</a>
+        + <a href="../../../Dollars/CO/Route/D_CO_Route_RR.html">[Over Assessed Routes - Residual Rate & Allowances]</a>
+        + <a href="../../../Dollars/CO/RestBG/D_CO_RestBG_RR.html">[Rest period and B&G - Residual Rate & Allowances]</a>
+        + <a href="../../../Dollars/CO/OtherAllow/D_CO_othAllw_RR.html">[Sh Diff, WE Prem & Others - Residual Rate & Allowances]</a>
+        - <a href="YOY_CO_STDP.html">[STDP PD Payout / Accrual]</a>
         </b></i>
-    </p>														
+    </p>													
 </body>	
 </html>
