--- a/Driver/YOY/CO/YOY_CO_RetailInit.html
+++ b/Driver/YOY/CO/YOY_CO_RetailInit.html
@@ -58,16 +58,18 @@
           <td class = "style3">Counter Operations</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3"> Allowances / Other</td></tr>		
+          <td class = "style3">Retail Initiatives</td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
-            <td class = "style3"> YOY Dollars  </td></tr>
+            <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="YOY_CO_RemainAllow.html">[Remaining Allowances]</a>
-            + <a href="YOY_CO_Grievances.html">[Grievances / Pay inlieu]</a>
-            + <a href="YOY_CO_OtherCostPressures.html">[Other Cost Pressures / Savings]</a>
+        <i>Value = <b><a href="../../../Dollars/CO/HoursWorked/D_CO_HrWk_RetailInit.html">[Retail Initiatives - Hours Worked]</a>
+        + <a href="../../../Dollars/CO/Absences/D_CO_PdAbs_RetailInit.html">[Retail Initiatives - Absences]</a>
+        + <a href="../../../Dollars/CO/Vacation/D_CO_Vac_RetailInit.html">[Retail Initiatives - Vacation]</a>
+        + <a href="../../../Dollars/CO/Training+UnionLeaves/D_CO_Train_RetailInit.html">[Retail Initiatives - Training & Union Leaves]</a>
+        + <a href="../../../Dollars/CO/StatHolidays/D_CO_Stat_RetailInit.html">[Retail Initiatives - Stat Holidays]</a>
+        + <a href="../../../Dollars/CO/OtherAllow/D_CO_othAllw_RetailInit.html">[Retail Initiatives - Sh Diff, WE Prem & Others]</a>       
         </b></i>
     </p>														
 </body>	
-</html>
