--- a/Driver/YOY/CO/YOY_CO_TradeDays.html
+++ b/Driver/YOY/CO/YOY_CO_TradeDays.html
@@ -58,16 +58,18 @@
           <td class = "style3">Counter Operations</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3"> Allowances / Other</td></tr>		
+          <td class = "style3">  Trade Days Adj </td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
-            <td class = "style3"> YOY Dollars  </td></tr>
+            <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="YOY_CO_RemainAllow.html">[Remaining Allowances]</a>
-            + <a href="YOY_CO_Grievances.html">[Grievances / Pay inlieu]</a>
-            + <a href="YOY_CO_OtherCostPressures.html">[Other Cost Pressures / Savings]</a>
+        <i>Value = <b><a href="../../../Dollars/CO/HoursWorked/D_CO_HrWk_TradeDays.html">[Hours Worked - Trade Days Adj]</a>
+        + <a href="../../../Dollars/CO/Absences/D_CO_PdAbs_TradeDays.html">[Absences - Trade Days Adj]</a>
+        + <a href="../../../Dollars/CO/Vacation/D_CO_Vac_TradeDays.html">[Vacation - Trade Days Adj]</a>
+        + <a href="../../../Dollars/CO/Training+UnionLeaves/D_CO_Train_TradeDays.html">[Training & Union Leaves - Trade Days Adj]</a>
+        + <a href="../../../Dollars/CO/StatHolidays/D_CO_Stat_TradeDays.html">[Stat Holidays - Trade Days Adj]</a>
+        + <a href="../../../Dollars/CO/OtherAllow/D_CO_othAllw_TradeDays.html">[Sh Diff, WE Prem & Others - Trade Days Adj]</a>       
         </b></i>
-    </p>														
+    </p>													
 </body>	
-</html>
