--- a/Driver/YOY/MP/YOY_MP_Allowances.html
+++ b/Driver/YOY/MP/YOY_MP_Allowances.html
@@ -65,9 +65,12 @@
       </Table>														
     <p class = "eq">
         <i>Value = <b><a href="YOY_MP_RemainAllow.html">[Remaining Allowances]</a>
-            + <a href="YOY_MP_Grievances.html">[Grievances / Pay inlieu]</a>
+            + [Grievances / Pay inlieu]*
             + <a href="YOY_MP_OtherCostPressures.html">[Other Cost Pressures / Savings]</a>
         </b></i>
+        <br>
+        <br>
+        <i>* - only affected by plan variance and not year-over-year dollar variance (is zero for year-over-year).</i>
     </p>														
 </body>	
 </html>
