--- a/Driver/YOY/CO/YOY_CO_RateOther.html
+++ b/Driver/YOY/CO/YOY_CO_RateOther.html
@@ -58,16 +58,17 @@
           <td class = "style3">Counter Operations</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3"> Allowances / Other</td></tr>		
+          <td class = "style3">  Rate Other </td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
-            <td class = "style3"> YOY Dollars  </td></tr>
+            <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="YOY_CO_RemainAllow.html">[Remaining Allowances]</a>
-            + <a href="YOY_CO_Grievances.html">[Grievances / Pay inlieu]</a>
-            + <a href="YOY_CO_OtherCostPressures.html">[Other Cost Pressures / Savings]</a>
+        <i>Value = <b><a href="../../../Dollars/CO/HoursWorked/D_CO_HrWk_RR.html">[Hours Worked - Residual Rate & Allowances]</a>
+        + <a href="../../../Dollars/CO/Absences/D_CO_PdAbs_RR.html">[Absences - Residual Rate & Allowances]</a>
+        + <a href="../../../Dollars/CO/Vacation/D_CO_Vac_RR.html">[Vacation - Residual Rate & Allowances]</a>
+        + <a href="../../../Dollars/CO/Training+UnionLeaves/D_CO_Train_RR.html">[Training & Union Leaves - Residual Rate & Allowances]</a>   
+        + <a href="../../../Dollars/CO/StatHolidays/D_CO_Stat_RR.html">[Stat Holidays - Residual Rate & Allowances]</a>   
         </b></i>
     </p>														
 </body>	
-</html>
