--- a/Driver/YOY/CO/YOY_CO_Reorg.html
+++ b/Driver/YOY/CO/YOY_CO_Reorg.html
@@ -58,16 +58,19 @@
           <td class = "style3">Counter Operations</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3"> Allowances / Other</td></tr>		
+          <td class = "style3">  Reorg & Coding </td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
-            <td class = "style3"> YOY Dollars  </td></tr>
+            <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="YOY_CO_RemainAllow.html">[Remaining Allowances]</a>
-            + <a href="YOY_CO_Grievances.html">[Grievances / Pay inlieu]</a>
-            + <a href="YOY_CO_OtherCostPressures.html">[Other Cost Pressures / Savings]</a>
+        <i>Value = <b>[Transfers within Region]*
+            + [PY / CY Non-Recurring]*
+            + <a href="YOY_CO_TransfersOutsideRegion.html">[Transfers outside region/Others]</a>
         </b></i>
+        <br>
+        <br>
+        <i>* - currently zero</i>
     </p>														
 </body>	
 </html>
