--- a/Driver/YOY/CO/YOY_CO_TransfersOutsideRegion.html
+++ b/Driver/YOY/CO/YOY_CO_TransfersOutsideRegion.html
@@ -58,16 +58,17 @@
           <td class = "style3">Counter Operations</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3"> Allowances / Other</td></tr>		
+          <td class = "style3">  Transfers Outside Region/Other </td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
-            <td class = "style3"> YOY Dollars  </td></tr>
+            <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="YOY_CO_RemainAllow.html">[Remaining Allowances]</a>
-            + <a href="YOY_CO_Grievances.html">[Grievances / Pay inlieu]</a>
-            + <a href="YOY_CO_OtherCostPressures.html">[Other Cost Pressures / Savings]</a>
+        <i>Value = <b><a href="../../../Dollars/CO/HoursWorked/D_CO_HrWk_Reorg.html">[Hours Worked - Reorg & Coding]</a>
+        + <a href="../../../Dollars/CO/Absences/D_CO_PdAbs_Reorg.html">[Absences - Reorg & Coding]</a>
+        + <a href="../../../Dollars/CO/Vacation/D_CO_Vac_Reorg.html">[Vacation - Reorg & Coding]</a>
+        + <a href="../../../Dollars/CO/Training+UnionLeaves/D_CO_Train_Reorg.html">[Training & Union Leaves - Reorg & Coding]</a>
+        + <a href="../../../Dollars/CO/StatHolidays/D_CO_Stat_Reorg.html">[Stat Holidays - Reorg & Coding]</a>       
         </b></i>
-    </p>														
+    </p>													
 </body>	
-</html>
