--- a/Driver/YOY/MP/YOY_MP_OtherCostPressures.html
+++ b/Driver/YOY/MP/YOY_MP_OtherCostPressures.html
@@ -64,9 +64,8 @@
             <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="YOY_MP_Allowances.html">[Allowances / Other]</a>
-        - <a href="YOY_MP_RemainAllow.html">[Remaining Allowances]</a>
-        - <a href="YOY_MP_Grievances.html">[Grievances / Pay inlieu]</a>
+        <i>Value = <b><a href="../../../Dollars/MP/HHBonus/D_MP_HHBonus_RR.html">[Householder Bonus - Residual Rate & Allowances]</a>
+        + <a href="../../../Dollars/MP/OthLab/D_MP_OthLab_RR.html">[Other Labour - Residual Rate & Allowances]</a>
         </b></i>
     </p>													
 </body>	
