--- a/Driver/Driver_CO.html
+++ b/Driver/Driver_CO.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Daniel Gould, 2019, Canada Post -->
 <html>
 <head>
     <ul>
@@ -27,6 +28,25 @@
                 <a href="../Hours/HourMatrix_CO.html">Counter Operations</a>
             </div>
         </li>
+        <li class="dropdown">
+          <a href="javascript:void(0)" class="dropbtn">Reference</a>
+          <div class="dropdown-content">
+              <a href="../index.html">Main Menu</a>
+              <a href="../Reference/ActGrp.html">Act Group</a>
+              <a href="../Reference/Adjustments.html">Adjustments</a>
+              <a href="../Reference/AllocationRates.html">Allocation Rates</a>
+              <a href="../Reference/Dollars.html">BW Dollars</a>
+              <a href="../Reference/GLCEGrp_Dollars.html">GLCE Group (Dollars)</a>
+              <a href="../Reference/GLCEGrp_Hours.html">GLCE Group (Hours)</a>
+              <a href="../Reference/Hours.html">BW Hours</a>
+              <a href="../Reference/HoursNonHoursSplit.html">Hours v Non Hours Related</a>
+              <a href="../Reference/LYPaidRate.html">LY Paid Rate</a>
+              <a href="../Reference/Plant_NonPlant.html">Plant v Non Plant</a>
+              <a href="../Reference/TimeGroup_Dollars.html">Time Group (Dollars)</a>
+              <a href="../Reference/TimeGroup_Hours.html">Time Group (Hours)</a>
+              <a href="../Reference/WageIncrease.html">Wage Increase</a>
+          </div>
+      </li>
     </ul>
     <header><b>Driver View</b></header>
     <link rel="stylesheet" href="../style.css" />
