--- a/Hours/HourMatrix_CD.html
+++ b/Hours/HourMatrix_CD.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Daniel Gould, 2019, Canada Post -->
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
@@ -31,6 +32,7 @@
         <li class="dropdown">
           <a href="javascript:void(0)" class="dropbtn">Reference</a>
           <div class="dropdown-content">
+              <a href="../index.html">Main Menu</a>
               <a href="../Reference/ActGrp.html">Act Group</a>
               <a href="../Reference/Adjustments.html">Adjustments</a>
               <a href="../Reference/AllocationRates.html">Allocation Rates</a>
