--- a/Driver/Driver_CO.html
+++ b/Driver/Driver_CO.html
@@ -55,7 +55,7 @@
     <font face="Century Gothic" size ="2" color="black">
         <TABLE>	
             <tr>
-                <th><b>Counter Operations</b></th>
+                <th><b>COUNTER OPERATIONS</b></th>
                 <th><b>YOY Dollars</b></th>
                 <th><b>YOY Plan Var</b></th>
             </tr>	
