--- a/index.html
+++ b/index.html
@@ -60,19 +60,8 @@
         that the DLM uses. It is set up to be highly navigable and presents information in small parts at a time. 
         <br>
         <br>
-        The wiki is separated into four parts, which are in line with how the DLM's results are regularily presented. These are:
-        <br>
-        <a href="Hours/HourMatrix_CD.html">Hours Matrix</a>
-        <br>
-        <a href="Dollars/DollarMatrix_CD.html">Dollars Matrix</a>
-        <br>
-        <a href="Driver/Driver_CD.html">Driver View</a>
-        <br>
-        <a href="Reference/Dollars.html">References</a>
-        <br>
-        <br>
-        These can be selected at any time using the drop down menus above. The Hours and Dollars Matricies and the Driver views are separated 
-        by Act Group (CD/MP/CO). Below is a description of each view.
+        The wiki is separated into four parts, which are in line with how the DLM's results are regularily presented (see below). They can be 
+        accessed at anytime via the dropdown menu found at the top of every page.
     </p>
     <br>
     <p>
@@ -83,6 +72,12 @@
         The Hours Matrix corresponds to the <b>hours</b> portion of the tables found on tabs <i>VP Matrix / GM Matrix</i> and the various <i>Director
         Matrix</i> in the Direct Labour Report files. Here the data is divided into Drivers (columns) and Activity Types (Rows). 
         All data is in YOY Hours, with no plan involved.
+        <br>
+        <a href="Hours/HourMatrix_CD.html"> Collection & Delivery</a>
+        <br>
+        <a href="Hours/HourMatrix_MP.html"> Mail Processing</a>
+        <br>
+        <a href="Hours/HourMatrix_CO.html"> Counter Operations</a>
     </p>
     <br>
     <p>
@@ -94,6 +89,12 @@
         Matrix</i> in the Direct Labour Report files. Here the data is divided into Drivers (columns) and Activity Types (Rows). 
         All data is in YOY Hours, with no plan involved. In addition to the Activity Types used in the Hours Matrix, there are additional 
         Non-Hours Related activities (all data in the DLM is labour-related, but some is not directly tied to a paid hour).
+        <br>
+        <a href="Dollars/DollarMatrix_CD.html"> Collection & Delivery</a>
+        <br>
+        <a href="Dollars/DollarMatrix_MP.html"> Mail Processing</a>
+        <br>
+        <a href="Dollars/DollarMatrix_CO.html"> Counter Operations</a>
     </p>
     <br>
     <p>
@@ -104,6 +105,12 @@
         The Driver View corresponds to the <i>ByGM / ByDirector / Driver View</i> tabs in the Direct Labour Report files. Here data is split into 
         drivers for each Act Group and both the YOY Dollar Variance and Plan Dollar Variance are shown. For the most part the calculation refers 
         back to the Dollars Matrix, as the same data is effectively just presented in a new format for the Driver View. 
+        <br>
+        <a href="Driver/Driver_CD.html"> Collection & Delivery</a>
+        <br>
+        <a href="Driver/Driver_MP.html"> Mail Processing</a>
+        <br>
+        <a href="Driver/Driver_CO.html"> Counter Operations</a>
     </p>
     <br>
     <p>
